--- a/translations/zh-tw.yml
+++ b/translations/zh-tw.yml
@@ -421,6 +421,7 @@ order:
     description_details_label: 項目詳情（可選）
     no_goods_error: 需要申請最少一件物品
     no_time_slot_selected_error: 請選擇預約時間
+    info_3: "and we will help if we can."
   request:
     remove_req: 從此訂單中刪除申請
     remove: 移除
